Fix pagination spacing

--- a/less/posts-list.less
+++ b/less/posts-list.less
@@ -171,6 +171,10 @@ main {
 		a:first-child {
 			margin-right: 0.5rem;
 		}
+
+		a:last-child {
+			margin-left: 0.5rem;
+		}
 	}
 
 	@media screen and (max-width: 576px) {
@@ -180,11 +184,15 @@ main {
 
 			a {
 				display: block;
-				margin-bottom: 0.5rem;
+				margin: 0.5rem 0;
 			}
 
 			a:first-child {
 				margin-right: 0;
+			}
+
+			a:last-child {
+				margin-left: 0;
 			}
 		}
 	}
